--- a/force-app/main/default/classes/RiskQueueable.cls
+++ b/force-app/main/default/classes/RiskQueueable.cls
@@ -13,6 +13,6 @@ public class RiskQueueable implements Queueable, Database.allowscallouts{
             }
         }
         Database.update(riskList,false);
-        system.debug('test commit');
+        system.debug('test commit 2');
     }
 }
